--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://m0jisto.github.io/Admin-Panel/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,6 +10,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -18,13 +20,15 @@
     "react-scripts": "3.4.3",
     "router": "^1.3.5"
   },
-  "proxy": "https://backend-admin-panel.herokuapp.com/",
+  "proxy": "https://backend-admin-panel.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon api/server.js"
+    "server": "nodemon api/server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
