--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -19,7 +20,7 @@
     "react-scripts": "3.4.3",
     "router": "^1.3.5"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://backend-admin-panel.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
