--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin-panel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://m0jisto.github.io/Admin-Panel",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -25,7 +26,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server/app.js"
+    "server": "nodemon server/app.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
